[gd_scene load_steps=9 format=2]

[ext_resource path="res://DungeonCrawler/UI/PageTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_8.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_6.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button_press.png" type="Texture" id=4]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button.png" type="Texture" id=5]
[ext_resource path="res://Assets/ui/back_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/ui/back_button.png" type="Texture" id=7]
[ext_resource path="res://DungeonCrawler/UI/Settings/ChangePassword.gd" type="Script" id=8]

[node name="ChangePassword" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="Label" parent="." index="3"]
text = "Change password"

[node name="BackButton" parent="." index="4"]
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
scene_to_load = "res://DungeonCrawler/UI/Settings/Settings.tscn"

[node name="ChangePasswordBox" type="VBoxContainer" parent="." index="5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -30.0
margin_right = 95.0
margin_bottom = 41.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OldPassword" type="HBoxContainer" parent="ChangePasswordBox" index="0"]
margin_right = 185.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="ChangePasswordBox/OldPassword" index="0"]
margin_top = 1.0
margin_right = 98.0
margin_bottom = 16.0
rect_min_size = Vector2( 98, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "CUrrent password:"
align = 2
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="ChangePasswordBox/OldPassword" index="1"]
margin_left = 102.0
margin_right = 185.0
margin_bottom = 18.0
rect_min_size = Vector2( 75, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )

[node name="NewPassword" type="HBoxContainer" parent="ChangePasswordBox" index="1"]
margin_top = 20.0
margin_right = 185.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="ChangePasswordBox/NewPassword" index="0"]
margin_top = 1.0
margin_right = 98.0
margin_bottom = 16.0
rect_min_size = Vector2( 98, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "New Password: "
align = 2
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="ChangePasswordBox/NewPassword" index="1"]
margin_left = 102.0
margin_right = 185.0
margin_bottom = 18.0
rect_min_size = Vector2( 75, 18 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
secret = true

[node name="NewPasswordReconfirmation" type="HBoxContainer" parent="ChangePasswordBox" index="2"]
margin_top = 40.0
margin_right = 185.0
margin_bottom = 65.0

[node name="Label" type="Label" parent="ChangePasswordBox/NewPasswordReconfirmation" index="0"]
margin_right = 98.0
margin_bottom = 25.0
rect_min_size = Vector2( 98, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "Confirm new password:"
align = 2
valign = 1
autowrap = true
uppercase = true

[node name="LineEdit" type="LineEdit" parent="ChangePasswordBox/NewPasswordReconfirmation" index="1"]
margin_left = 102.0
margin_right = 185.0
margin_bottom = 25.0
rect_min_size = Vector2( 75, 18 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
secret = true

[node name="ButtonContainer" type="HBoxContainer" parent="." index="6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 43.0
margin_right = 40.0
margin_bottom = 63.0
rect_min_size = Vector2( 80, 20 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="TextureButton" parent="ButtonContainer" index="0"]
margin_right = 80.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="ButtonContainer/SubmitButton" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 20 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.121569, 1 )
text = "Submit"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ButtonContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
